# gpsim-wasm

./: .dockerignore  .gitignore  ChangeLog  Makefile.am  build.xml  configure.ac  get_cl_revision.sh
.github/workflows/: webui.yml
cli/: Makefile.am  cmd_attach.cc  cmd_attach.h  cmd_break.cc  cmd_break.h  cmd_bus.cc  cmd_bus.h  cmd_clear.cc  cmd_clear.h  cmd_disasm.cc  cmd_disasm.h  cmd_dump.cc  cmd_dump.h  cmd_echo.cc  cmd_echo.h  cmd_frequency.cc  cmd_frequency.h  cmd_help.cc  cmd_help.h  cmd_icd.cc  cmd_icd.h  cmd_list.cc  cmd_list.h  cmd_load.cc  cmd_load.h  cmd_log.cc  cmd_log.h  cmd_macro.cc  cmd_macro.h  cmd_module.cc  cmd_module.h  cmd_node.cc  cmd_node.h  cmd_processor.cc  cmd_processor.h  cmd_quit.cc  cmd_quit.h  cmd_reset.cc  cmd_reset.h  cmd_run.cc  (+30 more)
doc/: Makefile.am  gpsim.html  gpsim.lyx  gpsimWin32.html  gpsim_svn.html  index.html  snap_footer.html
doc/gpsim.html.LyXconv/: Makefile  elyxer.py  elyxer_p3.py
docker/: entrypoint  startwasm
eXdbm/: eXdbm.c  eXdbm.h  eXdbmErrors.h  eXdbmTypes.h  misc.c  misc.h  parse.c  parse.h  test1.c  test2.c  test3.c
examples/14bit/: Makefile.am  encoder_test.asm  encoder_test.stc  p16c64_pwm.asm  p16c64_pwm.stc  p16c65_pwm.asm  p16c74_pwm.stc  usart_14.asm
examples/scripts/: README  client.cc  client2.cc  client3.cc  client_interface.cc  client_interface.h  makefile
extras/: module_manager.cc
extras/dht11/: dht11.cc  dht11.h
extras/ds1307/: ds1307.cc  ds1307.h
extras/ds1820/: bit1w.cc  bit1w.h  ds1820.cc  rom1w.cc  rom1w.h
extras/lcd/: Makefile.am  hd44780.cc  hd44780.h  lcd.cc  lcd.h  lcdgui.cc  raw_lcd.cc  raw_lcd.h
extras/solar/: solar.cc  solar.h
gpsim/: Makefile.am  main.cc
gui/: Makefile.am  bitlog.cc  bytelog.cc  bytelog.h  gui.h  gui_breadboard.cc  gui_breadboard.h  gui_break.cc  gui_interface.h  gui_main.cc  gui_menu.cc  gui_object.cc  gui_object.h  gui_processor.cc  gui_processor.h  gui_profile.cc  gui_profile.h  gui_register.h  gui_regwin.cc  gui_regwin.h  gui_scope.cc  gui_scope.h  gui_src.cc  gui_src.h  gui_src_asm.cc  gui_src_opcode.cc  gui_stack.cc  gui_stack.h  gui_statusbar.cc  gui_statusbar.h  gui_stopwatch.cc  gui_stopwatch.h  gui_symbols.cc  gui_symbols.h  gui_trace.cc  gui_trace.h  gui_watch.cc  gui_watch.h  makefile.mingw  preferences.cc  (+4 more)
gui/gtkextra/: gtkextra-marshal.c  gtkextra-marshal.h  gtkextra.c  gtkextrafeatures.h  gtkitementry.c  gtkitementry.h  gtksheet.c  gtksheet.h
modules/: encoder.cc  encoder.h  gpsim_modules.cc  i2c-eeprom.cc  i2c-eeprom.h  i2c.cc  i2c.h  i2c2par.cc  i2c2par.h  led.cc  led.h  logic.cc  logic.h  m_stimuli.cc  m_stimuli.h  module_attribute.h  paraface.cc  paraface.h  push_button.cc  push_button.h  resistor.cc  resistor.h  switch.cc  switch.h  ttl.cc  ttl.h  usart.cc  usart.h  video.cc  video.h
plat/win32/: configure_win32.awk  gpsim.nsi  makefile.mingw  settings_reg.cpp
regression/: rt.sh  run_regression.sh
regression/a2d/: p10f222.asm  p16c71.asm  p16f819.asm  p16f871.asm  p16f873a.asm  p16f874a.asm  p16f88.asm  p18f1220.asm  p18f26k22.asm  p18f4321.asm  p18f452.asm
regression/analog_stim/: p12f1822.asm  p18f452.asm
regression/breakpoints/: breakpoints.asm
regression/ccp/: Makefile  ccp_12f683.asm  ccp_819.asm  ccp_877a.asm  pwm_12f683.asm  pwm_26k22.asm  pwm_6520.asm  pwm_877a.asm
regression/ccp_628/: ccp_628.asm
regression/comparator/: Makefile  compar_10f204.asm  compar_2321.asm  compar_26k22.asm  compar_628.asm  compar_6520.asm  compar_873a.asm  compar_877a.asm  compar_882.asm
regression/digital_stim/: digital_stim.asm
regression/eeprom_wide/: Makefile  eeprom_wide.asm
regression/epwm/: p16f882.asm  p16f887.asm  p18f1220.asm  p18f2321.asm  p18f26k22.asm  p18f4321.asm
regression/i2c/: i2c_low.inc  p16f819.asm  p16f876a.asm  p16f88.asm
regression/instructions_12bit/: 12c508.lkr  instructions_12bit.asm
regression/instructions_14bit/: 16f628.lkr  branching.asm  instructions_14bit.asm
regression/instructions_16bit/: 18f452.lkr  instructions_16bit.asm
regression/interrupts_14bit/: int_sleep.asm  interrupts_14bit.asm
regression/interrupts_16bit/: interrupts_16bit.asm  priority.asm
regression/intosc/: Makefile  p18f1220.asm  p18f14k22.asm  p18f2321.asm  p18f26k22.asm
regression/logic_test/: logic_test.asm
regression/macro_test/: macro_test.asm
regression/node_test/: 16f877.lkr  node_test.asm
regression/p10f32x/: p10f320.asm  p10f320_cwg.asm  p10f320_nco.asm
regression/p12c509/: reset.asm
regression/p12ce518/: 12ce519.lkr  p12ce518.asm
regression/p12f675/: p12f629.asm  p12f675.asm  p12f683.asm
regression/p16f676/: Makefile  p16f676.asm  reset.asm
regression/p16f684/: Makefile  a2d_684.asm  compar_684.asm  epwm.asm  nwdt_16f684.asm  reset.asm  wdt_16f684.asm
regression/p16f690/: epwm.asm  eusart.asm  eusart_690.asm  nwdt_16f631.asm  p16f690.asm  wdt_16f677.asm  wdt_16f685.asm
regression/p16f6xx/: Makefile  p16f610.asm  p16f616.asm
regression/p16f84/: 16f84.lkr  p16f84.asm  reset.asm
regression/p16f88x/: Makefile  a2d.asm  comparator.asm  eusart.asm  i2c.asm  i2c_slave.asm  p16f882.asm  p16f883.asm  p16f886.asm  (+2 more)
src/: 12bit-hexdecode.cc  12bit-instructions.h  12bit-processors.cc  12bit-processors.h  14bit-hexdecode.cc  14bit-instructions.cc  14bit-instructions.h  14bit-processors.cc  14bit-processors.h  14bit-registers.cc  14bit-registers.h  14bit-tmrs.cc  14bit-tmrs.h  16bit-hexdecode.cc  16bit-instructions.cc  16bit-instructions.h  16bit-processors.cc  16bit-processors.h  16bit-registers.cc  16bit-registers.h  16bit-tmrs.cc  16bit-tmrs.h  Makefile.am  ValueCollections.cc  ValueCollections.h  a2d_v2.cc  a2d_v2.h  a2dconverter.cc  a2dconverter.h  at.cc  at.h  attributes.cc  attributes.h  bit.cc  bit.h  bitlog.cc  bitlog.h  breakpoints.cc  breakpoints.h  clc.cc  (+149 more)
src/dspic/: dspic-instructions.cc  dspic-instructions.h  dspic-processors.cc  dspic-processors.h  dspic-registers.cc  dspic-registers.h  gpsim_modules.cc
src/util/: cod.cc  cod.h  program.cc  program.h
wasm/: Makefile.am  doemconfigure  gpsim_test.mjs  gpsim_wasm.d.ts  wasm.cc
webui/: index.html  package.json  vite.config.ts
(+115 files in other folders)
